--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ovenplayer": "^0.10.30",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
+    "moment": "^2.29.4",
     "postcss": "^8.4.25",
     "sass": "^1.63.6",
     "tailwindcss": "^3.3.2",
